crates/cli/tests/integration/snapshots/integration__snapshot_tests__codeclimate_unlisted_deps_only.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/unlisted-dependency",
    "description": "Package 'chalk' is imported but not listed in package.json",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "e12b911cefa8959d",
    "location": {
      "path": "src/logger.ts",
      "lines": {
        "begin": 1
      }
    }
  }
]
