crates/cli/tests/integration/snapshots/integration__snapshot_tests__codeclimate_unresolved_imports_only.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/unresolved-import",
    "description": "Import './missing' could not be resolved",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "2763b6c43a5a66e8",
    "location": {
      "path": "src/index.ts",
      "lines": {
        "begin": 3
      }
    }
  }
]
