crates/cli/tests/integration/snapshots/integration__snapshot_tests__codeclimate_unused_deps_only.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/unused-dependency",
    "description": "Package 'lodash' is in dependencies but never imported",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "1d04d08d81daf650",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 5
      }
    }
  }
]
