crates/cli/tests/integration/snapshots/integration__snapshot_tests__codeclimate_unused_dev_deps_only.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/unused-dev-dependency",
    "description": "Package 'jest' is in devDependencies but never imported",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "2a4393b133ea1523",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 12
      }
    }
  }
]
